oasis-macros/tests/ui/multi_contract_derive.stderr
error: `contract!` must contain exactly one #[derive(Contract)] struct. Additional occurrence here:
 --> $DIR/multi_contract_derive.rs:7:5
  |
7 |     #[derive(Contract)]
  |     ^

error: aborting due to previous error

